--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "jsonp": "^0.2.1",
+    "qrcode": "^1.4.4",
     "swiper": "^5.4.3",
     "vue": "^2.6.11",
     "vue-router": "^3.3.2",
